add additional packages

--- a/roles/visidata/tasks/main.yml
+++ b/roles/visidata/tasks/main.yml
@@ -9,6 +9,8 @@
       - python-pandas
       - python-requests
       - python-xlrd
+      - python-matplotlib
+      - python-numpy
     state: present
 
 - name: Push visidata desktop file
