--- a/playbook.yml
+++ b/playbook.yml
@@ -9,6 +9,7 @@
     - { role: systemd, tags: ['systemd'] }
     - { role: dconf, tags: ['dconf'] }
     - { role: android, tags: ['android'] }
+    - { role: android, tags: ['arduino'] }
     - { role: archive, tags: ['archive'] }
     - { role: borg, tags: ['borg'] }
     - { role: browsers, tags: ['browsers'] }
