--- a/roles/colemak-dh/tasks/main.yml
+++ b/roles/colemak-dh/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Enable colemak for XOrg libinput
   template:
-    src: 40-libinput-colemak.conf.j2
+    src: 00-keyboard.conf.j2
     dest: /etc/X11/xorg.conf.d/00-keyboard.conf
 
 - name: Add dh colemak keymap
