change cups drivers destinations

--- a/roles/cups/tasks/main.yml
+++ b/roles/cups/tasks/main.yml
@@ -44,5 +44,5 @@
 - name: Copy Cups drivers
   copy:
     src: files/    # note the '/' <-- !!!
-    dest: /etc/cups/ppd/
+    dest: /home/{{ user.name }}/Downloads/
 
