--- a/roles/cups/tasks/main.yml
+++ b/roles/cups/tasks/main.yml
@@ -45,5 +45,6 @@
   copy:
     src: files/    # note the '/' <-- !!!
     dest: /home/{{ user.name }}/Downloads/
-    become: yes
-
+    owner: "{{ user.name }}"
+    group: "{{ user.group }}"
+    mode: '0644'
