--- a/roles/docker/handlers/main.yml
+++ b/roles/docker/handlers/main.yml
@@ -1,5 +1,3 @@
 ---
-- name: restart_docker_service
-  service:
-    name: docker
-    state: restarted
+- name: restart docker
+  service: name=docker.service state=restarted
