enable docker service

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -34,3 +34,8 @@
     owner: root
     group: root
 
+- name: Enable and start Docker
+  service:
+    name: docker.service
+    enabled: yes
+    state: started
