--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -33,9 +33,5 @@
     mode: 0400
     owner: root
     group: root
-
-- name: Enable and start Docker
-  service:
-    name: docker.service
-    enabled: yes
-    state: started
+  notify:
+    - restart docker
