try to fix docker restarting

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -35,3 +35,8 @@
     group: root
   notify:
     - restart docker
+
+- name: Restart docker service
+  systemd:
+    name: docker.service
+    state: restarted
