adjust reflector timer

--- a/roles/mirrorlist/tasks/main.yml
+++ b/roles/mirrorlist/tasks/main.yml
@@ -29,3 +29,6 @@
   notify:
     - reload systemd config
     - restart reflector update
+
+- name: Enable reflector timer
+  service: name=reflector.timer enabled=yes state=started
