adjust sound socket

--- a/roles/sound/handlers/main.yml
+++ b/roles/sound/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: enable pipewire socket
+- name: enable pipewire pulse socket
   systemd:
     name: pipewire-pulse.socket
     scope: user
