fix pacman task

--- a/roles/x/tasks/main.yml
+++ b/roles/x/tasks/main.yml
@@ -43,7 +43,7 @@
     - aur
 
 - name: Install configuration utility
-  pacman: qt5ct
+  pacman: name=qt5ct state=present
 
 - name: Copy Xorg configuration
   copy:
