--- a/roles/fonts/files/local.conf
+++ b/roles/fonts/files/local.conf
@@ -45,7 +45,7 @@
   <alias>
     <family>monospace</family>
     <prefer>
-      <family>MesloLGS NF</family>
+      <family>mplus Nerd Font Mono</family>
       <family>Noto Color Emoji</family>
       <family>all-the-icons</family>
       <family>Noto Emoji</family>
